--- a/client/app/views/detail/facebook.example.html
+++ b/client/app/views/detail/facebook.example.html
@@ -24,42 +24,17 @@
 						<h4 class="no-height-margin line height-btn"><i class="icon icon-facebook icon-large lightest-text"></i></h4>
 					</div>
 					<div class="span75-25 center-align ">
-						<span class="machine no-height-margin line normalcase height-btn lightest-text">1. Connect</span>
+						<span class="machine no-height-margin line normalcase height-btn lightest-text">Sign in</span>
 					</div>	
 				</div>
 			</a>
 		</div>
-
-		<div class="row-fluid max-width-400 withShadow bottom-margin">
-			<a ng-click="exampleCall()" class="btn-fb btn-large">
-				<div class="row-fluid">
-					<div class="span25-75 center-align">
-						<h4 class="no-height-margin line height-btn"><i class="icon icon-facebook icon-large lightest-text"></i></h4>
-					</div>
-					<div class="span75-25 center-align ">
-						<span class="machine no-height-margin line normalcase height-btn lightest-text">2. Send Request</span>
-					</div>	
-				</div>
-			</a>
-		</div>
-
 		
 <pre>
   $scope.facebookCtrl.fbAuthData = {{ facebookCtrl.fbAuthData }}
 
-  $scope.facebookCtrl.response = {{ facebookCtrl.response }}
-
 </pre>
 
 
-		<div class="row-fluid white-back withShadow withRadius top-margin top-padding bottom-padding width-padding">
-			
-			<div class="row-fluid left-align muted">
-				So what did we do here? We made it an actual joy to work with the Facebook API.
-				<br><br>
-		        Check out the details <a href="#/features/facebookSDK" class="">Features > Angular Wrapper for Facebook SDK</a>
-		</div>
-	</div>
 		
 </div>
-<div class="row-fluid" ng-include src="'app/views/footer.html'"></div>
